--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = "cv-datalib-jakub-hejhal"
-version = "0.0.1"
-author = "Jakub Hejhal"
-author_email = "kubic71@gmail.com"
-description = "CV Datalib"
+name = cv-datalib-jakub-hejhal
+version = 0.0.2
+author = Jakub Hejhal
+author_email = kubic71@gmail.com
+description = CV Datalib
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
-project_urls = https://github.com/kubic71/cv-datalib
+url = https://github.com/kubic71/cv-datalib
+project_urls =
     Bug Tracker = https://github.com/kubic71/cv-datalib/issues
 classifiers =
     Programming Language :: Python :: 3
